# gdext-egui

./: Cargo.toml
example/: project.godot
example/.rust/: .gitignore  Cargo.toml  lib.rs  plugin.rs
src/: context.rs  lib.rs  surface.rs
