[package]
name = "gdext-egui"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = ["example/.rust"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "f40fa274644c4ed5458fbc5fd6d587d8a3b9e4e3" }
egui = { version = "0.27" }

itertools = "0.13"
tap = "1"

derive_setters = "0.1"
educe = "0.5"

with_drop = "0"

open = "5"
