[package]
name = "gdext_egui_example"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]
name = "gdext_egui_example"
path = "lib.rs"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "f40fa274644c4ed5458fbc5fd6d587d8a3b9e4e3" }
gdext-egui = { path = "../.." }

egui_demo_lib = { git = "https://github.com/emilk/egui.git", tag = "0.27.2" }

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", tag = "0.27.2" }
egui_extras = { git = "https://github.com/emilk/egui.git", tag = "0.27.2" }

# [patch."https://github.com/godot-rust/gdext"]
# godot = { path = "gdext/godot" }
